Fix for 320px resolution

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 		<img src="images/thiagochristof.jpg" width="150" height="150" alt="Thiago Christof" class="profile" align="left">
 		<h1>Thiago Christof</h1>
 		<p>Creator of <a href="http://openpie.org">OpenPie</a>, founder of <a href="http://www.livfeedr.com">Livfeedr</a>, co-organizer of <a href="http://sancahub.com.br">Sanca Hub</a> and life enthusiast.</p>
-		<p class="social">email: <a href="mailto:t@bakeapie.org">t@bakeapie.org</a> twitter: <a href="http://twitter.com/thiagochristof">@thiagochristof</a></p>
+		<p class="social">email: <a href="mailto:t@bakeapie.org">t@bakeapie.org</a><br />
+			twitter: <a href="http://twitter.com/thiagochristof">@thiagochristof</a></p>
 	</header>
 	
 	<article>
@@ -26,7 +27,7 @@
 		<span class="caption">“Pies are made to be shared!”</span>
 		
 		<h2>Another contributions</h2>
-		<p>In company of talented people, I'm currently running another contributions. Among then, I'm a co-organizer and enthusiast of <a href="http://sancahub.com.br">Sanca Hub</a>, a meeting of startups from São Carlos (SP, Brazil).</p>
+		<p>In company of talented people, I'm currently running another contributions. Among them, I'm a co-organizer and enthusiast of <a href="http://sancahub.com.br">Sanca Hub</a>, a meeting of startups from São Carlos (SP, Brazil).</p>
 		
 		<h2>Previous contributions</h2>
 		<p>In the early years I was focused to contribute to Astronomy web community. Two big highlights were Projeto Urânia and Urania View.</p> 
