--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
 	<meta name="description" content="Personal page of Thiago Christof.">
 	<meta name="viewport" content="width=device-width">
 	<link rel="stylesheet" href="stylesheets/screen.css">
-	<!-- analytics -->
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+	  ga('create', 'UA-39630414-1', 'bakeapie.org');
+	  ga('send', 'pageview');
+
+	</script>
 </head>
 <body>
 	
