--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<meta name="description" content="Personal page of Thiago Christof.">
 	<meta name="viewport" content="width=device-width">
 	<link rel="stylesheet" href="stylesheets/screen.css">
+	<meta name="google-site-verification" content="3OCmTNJ0stt4CViFXZNTGac-gxLAN_O3OIBxupz2hpk" />
 	<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
