html5 and css revision

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
 	<meta charset="utf-8">
 	<title>Thiago Christof</title>
 	<meta name="description" content="Personal page of Thiago Christof.">
-	<meta name="viewport" content="width=device-width">
+	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<link rel="stylesheet" href="stylesheets/screen.css">
-	<meta property="og:image" content="http://bakeapie.org/images/thiagochristof.jpg"/>
-	<meta name="google-site-verification" content="3OCmTNJ0stt4CViFXZNTGac-gxLAN_O3OIBxupz2hpk" />
+	<link rel="canonical" href="http://bakeapie.org/">
+	<meta property="og:image" content="http://bakeapie.org/images/thiagochristof.jpg">
+	<meta name="google-site-verification" content="3OCmTNJ0stt4CViFXZNTGac-gxLAN_O3OIBxupz2hpk">
 	<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -23,14 +24,14 @@
 <body>
 	
 	<header>
-		<img src="images/thiagochristof.jpg" width="150" height="150" alt="Thiago Christof" class="profile" align="left">
+		<img src="images/thiagochristof.jpg" width="150" height="150" alt="Thiago Christof" class="profile">
 		<h1>Thiago Christof</h1>
-		<p>Creator of <a href="http://openpie.org">OpenPie</a>, founder of <a href="http://www.livfeedr.com">Livfeedr</a>, co-organizer of <a href="http://sancahub.com.br">Sanca Hub</a> and life enthusiast.</p>
-		<p class="social">email: <a href="mailto:t@bakeapie.org">t@bakeapie.org</a><br />
+		<p>Creator of <a href="http://openpie.org">OpenPie</a>, founder of <a href="http://www.livfeedr.com">Livfeedr</a>, co-organizer of <a href="http://sancahub.com.br">Sanca Hub</a>, and life enthusiast.</p>
+		<p class="social">email: <a href="mailto:t@bakeapie.org">t@bakeapie.org</a><br>
 			twitter: <a href="http://twitter.com/thiagochristof">@thiagochristof</a></p>
 	</header>
 	
-	<article>
+	<section>
 		<h2>I believe that we are blinded by a deep-rooted mindset,</h2>
 		<p>and it tells that developing is all about staying inside the OS walls. This is not necessarily to be the truth. In fact, it appears to exist a whole universe of brand new applications to be explored, applications that put <em>people</em> above the devices being holded in their hands.</p>
 		<p>The insight leads us to OpenPie. Why use it? To transmit data between devices, regardless the OS they are running or manufacturer constraints. OpenPie is open at <a href="http://openpie.org">openpie.org</a></p>
@@ -42,10 +43,7 @@
 		
 		<h2>Previous contributions</h2>
 		<p>In the early years I was focused to contribute to Astronomy web community. Two big highlights were Projeto Urânia and Urania View.</p> 
-	</article>
+	</section>
 	
-	<footer>
-	</footer>
-
 </body>
 </html>
