--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			twitter: <a href="http://twitter.com/thiagochristof">@thiagochristof</a></p>
 	</header>
 	
-	<section>
+	<section role="main">
 		<h2>I believe that we are blinded by a deep-rooted mindset,</h2>
 		<p>and it tells that developing is all about staying inside the OS walls. This is not necessarily to be the truth. In fact, it appears to exist a whole universe of brand new applications to be explored, applications that put <em>people</em> above the devices being holded in their hands.</p>
 		<p>The insight leads us to OpenPie. Why use it? To transmit data between devices, regardless the OS they are running or manufacturer constraints. OpenPie is open at <a href="http://openpie.org">openpie.org</a></p>
