--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 </head>
 <body>
 	
-	<header>
-		<img src="images/thiagochristof.jpg" width="150" height="150" alt="Thiago Christof" class="profile">
-		<h1>Thiago Christof</h1>
-		<p class="social">E-mail: <a href="mailto:t@bakeapie.org">t@bakeapie.org</a><br>
+	<header itemscope itemtype="http://schema.org/Person">
+		<img itemprop="image" src="images/thiagochristof.jpg" width="150" height="150" alt="Thiago Christof" class="profile">
+		<h1 itemprop="name">Thiago Christof</h1>
+		<p class="social">E-mail: <a itemprop="email" href="mailto:t@bakeapie.org">t@bakeapie.org</a><br>
 			Twitter: <a href="http://twitter.com/thiagochristof">@thiagochristof</a></p>
 	</header>
 	
