--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="stylesheets/screen.css">
 	<link rel="canonical" href="http://bakeapie.org/">
 	<meta property="og:image" content="http://bakeapie.org/images/thiagochristof.jpg">
-	<meta name="google-site-verification" content="3OCmTNJ0stt4CViFXZNTGac-gxLAN_O3OIBxupz2hpk">
+	<meta name="google-site-verification" content="ho8MnhbXC0Vlw6cjdH0k6hwt_a_-KOzcjFvRu12Kxyk" />
 	<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
