--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-	  ga('create', 'UA-39630414-1', 'bakeapie.org');
+	  ga('create', 'UA-39630414-1', 'thiagochristof.github.io');
 	  ga('send', 'pageview');
 
 	</script>
